src/objects/Referenciacion_y_verificacion__c.object
<CustomObject>
    <fields>
        <fullName>La_forma_de_pago_es_codeudor3__c</fullName>
        <label>La forma de pago es crédito o contado?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Crédito</fullName>
                </value>
                <value>
                    <fullName>Contado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>La_persona_cancela_a_tiempo_el_arriendo__c</fullName>
        <label>La persona cancela a tiempo el arriendo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Localidad_de_la_vivienda__c</fullName>
        <label>Localidad de la vivienda</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Localidad_de_la_vivienda_codeudor1__c</fullName>
        <label>Localidad de la vivienda</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Localidad_de_la_vivienda_codeudor2__c</fullName>
        <label>Localidad de la vivienda</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Localidad_de_la_vivienda_codeudor3__c</fullName>
        <label>Localidad de la vivienda</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Personas_a_cargo__c</fullName>
        <label>No. Personas a cargo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Personas_a_cargo_codeudor1__c</fullName>
        <label>No. Personas a cargo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_de_la_pareja__c</fullName>
        <label>Nombre de la pareja</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_de_la_pareja_codeudor1__c</fullName>
        <label>Nombre de la pareja</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_de_las_persona_familiar_codeudor1__c</fullName>
        <label>Nombre de las personas a cargo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nombre_de_las_persona_familiar_codeudor2__c</fullName>
        <label>Nombre de las personas a cargo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nombre_de_las_persona_familiar_codeudor3__c</fullName>
        <label>Nombre de las personas a cargo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nombre_de_las_personas_a_cargo__c</fullName>
        <label>Nombre de las personas a cargo</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nombre_de_las_personas_a_cargo_familiar__c</fullName>
        <label>Nombre de las personas a cargo</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nombre_de_quien_confirma_codeudor1__c</fullName>
        <label>Nombre de quién confirma la referencia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_de_quien_confirma_codeudor2__c</fullName>
        <label>Nombre de quién confirma la referencia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_de_quien_confirma_codeudor3__c</fullName>
        <label>Nombre de quién confirma la referencia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_de_quien_confirma_comercial1__c</fullName>
        <label>Nombre de quién confirma la referencia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_de_quien_confirma_comercial2__c</fullName>
        <label>Nombre de quién confirma la referencia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_de_quien_confirma_comercial3__c</fullName>
        <label>Nombre de quién confirma la referencia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_quien_confirma_la_refer_comercial__c</fullName>
        <label>Nombre de quién confirma la referencia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_quien_confirma_la_referencia__c</fullName>
        <label>Nombre de quién confirma la referencia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Observaciones10__c</fullName>
        <label>Observaciones</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones11__c</fullName>
        <label>Observaciones</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones12__c</fullName>
        <label>Observaciones</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones_cod1__c</fullName>
        <label>Observaciones</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Observaciones_codedudor2__c</fullName>
        <label>Observaciones</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones_codedudor3__c</fullName>
        <label>Observaciones</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Observaciones_familiar_codeudor1__c</fullName>
        <label>Observaciones</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones_familiar_codeudor2__c</fullName>
        <label>Observaciones</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones_familiar_codeudor3__c</fullName>
        <label>Observaciones</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ocupacion2__c</fullName>
        <label>Ocupación</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ocupacion3__c</fullName>
        <label>Ocupación</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ocupacion__c</fullName>
        <label>Ocupación</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ocupacion_de_la_pareja__c</fullName>
        <label>Ocupación de la pareja</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ocupacion_de_la_pareja_codeudor1__c</fullName>
        <label>Ocupación de la pareja</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ocupacion_personal_2__c</fullName>
        <label>Ocupación</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ocupacion_personal_3__c</fullName>
        <label>Ocupación</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ocupacion_personal_cod1__c</fullName>
        <label>Ocupación</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Para_empleado_nombre_de_la_empresa__c</fullName>
        <label>Para empleado, nombre de la empresa</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Para_empleado_nombre_de_la_empresa_cod1__c</fullName>
        <label>Para empleado, nombre de la empresa</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Para_independiente_que_actividad_cod1__c</fullName>
        <label>Para independiente que actividad realiza</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Para_independiente_que_actividad_realiza__c</fullName>
        <label>Para independiente que actividad realiza</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Para_pensionados_valor_de_la_pens_cod1__c</fullName>
        <label>Para pensionados, valor de la pensión</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Para_pensionados_valor_de_la_pension__c</fullName>
        <label>Para pensionados, valor de la pensión</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Propietario__c</fullName>
        <formula>Owner:User.FirstName&amp;&quot;&quot;&amp;Owner:User.MiddleName&amp;&quot;&quot;&amp;Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Propietario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proyecto_y_constructora_identificado__c</fullName>
        <label>Proyecto y constructora identificado?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Que_parentesco_tiene2__c</fullName>
        <label>Que parentesco tiene?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Que_parentesco_tiene3__c</fullName>
        <label>Que parentesco tiene?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Que_parentesco_tiene__c</fullName>
        <label>Que parentesco tiene?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Que_parentesco_tiene_codeudor1__c</fullName>
        <label>Que parentesco tiene con la señor(a)?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Que_parentesco_tiene_con_la_senor_a__c</fullName>
        <label>Que parentesco tiene con la señor(a)?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Que_parentesco_tiene_con_la_senora_or__c</fullName>
        <label>Que parentesco tiene con la señora(or)?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Que_parentesco_tiene_con_senor_codeudor2__c</fullName>
        <label>Que parentesco tiene con la señor(a)?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Que_parentesco_tiene_con_senor_codeudor3__c</fullName>
        <label>Que parentesco tiene con la señor(a)?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Que_parentesco_tiene_familiar_codeudor1__c</fullName>
        <label>Que parentesco tiene con la señora(or)?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Que_parentesco_tiene_familiar_codeudor2__c</fullName>
        <label>Que parentesco tiene con la señora(or)?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Que_parentesco_tiene_familiar_codeudor3__c</fullName>
        <label>Que parentesco tiene con la señora(or)?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Que_parentesco_tiene_personal_2__c</fullName>
        <label>Que parentesco tiene?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Que_parentesco_tiene_personal_3__c</fullName>
        <label>Que parentesco tiene?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Que_parentesco_tiene_personal_cod1__c</fullName>
        <label>Que parentesco tiene?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Que_tipo_de_mercancia_codeudor1__c</fullName>
        <label>Que tipo de mercancía compra o vende?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Que_tipo_de_mercancia_codeudor2__c</fullName>
        <label>Que tipo de mercancía compra o vende?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Que_tipo_de_mercancia_codeudor3__c</fullName>
        <label>Que tipo de mercancía compra o vende?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Que_tipo_de_mercancia_compra_o_vende__c</fullName>
        <label>Que tipo de mercancía compra o vende?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Que_tipo_de_vivienda_espera_comprar__c</fullName>
        <label>Que tipo de vivienda espera comprar?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nueva</fullName>
                </value>
                <value>
                    <fullName>Usada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Radicacion_de_credito__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Radicación de crédito</label>
        <referenceTo>Radicacion_de_credito__c</referenceTo>
        <relationshipLabel>Referenciaciones y verificaciones</relationshipLabel>
        <relationshipName>Referenciaciones_y_verificaciones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Si_es_arriendo_antig_edad_arriendo__c</fullName>
        <label>Si es arriendo, antigüedad arriendo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Si_es_arriendo_antiguedad_arriendo_cod1__c</fullName>
        <label>Si es arriendo, antigüedad arriendo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Si_es_familiar_de_quien_es__c</fullName>
        <label>Si es familiar, de quien es</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Si_es_familiar_de_quien_es_codeudor1__c</fullName>
        <label>Si es familiar, de quien es</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sueldo__c</fullName>
        <label>Sueldo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sueldo_codeudor1__c</fullName>
        <label>Sueldo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sueldo_codeudor2__c</fullName>
        <label>Sueldo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sueldo_codeudor3__c</fullName>
        <label>Sueldo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tiene_algun_tipo_de_bien__c</fullName>
        <label>Tiene algún tipo de bien?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tiene_algun_tipo_de_bien_cod1__c</fullName>
        <label>Tiene algún tipo de bien?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_contrato__c</fullName>
        <label>Tipo de contrato</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fijo</fullName>
                </value>
                <value>
                    <fullName>Término fijo</fullName>
                </value>
                <value>
                    <fullName>Término Indefinido</fullName>
                </value>
                <value>
                    <fullName>Prestación de servicios</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_contrato_codeudor1__c</fullName>
        <label>Tipo de contrato</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fijo</fullName>
                </value>
                <value>
                    <fullName>Temporal</fullName>
                </value>
                <value>
                    <fullName>Indefinido</fullName>
                </value>
                <value>
                    <fullName>Prestación de servicios</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_contrato_codeudor2__c</fullName>
        <label>Tipo de contrato</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fijo</fullName>
                </value>
                <value>
                    <fullName>Temporal</fullName>
                </value>
                <value>
                    <fullName>Indefinido</fullName>
                </value>
                <value>
                    <fullName>Prestación de servicios</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_contrato_codeudor3__c</fullName>
        <label>Tipo de contrato</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fijo</fullName>
                </value>
                <value>
                    <fullName>Temporal</fullName>
                </value>
                <value>
                    <fullName>Indefinido</fullName>
                </value>
                <value>
                    <fullName>Prestación de servicios</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_producto__c</fullName>
        <formula>TEXT(Radicacion_de_credito__r.Solicitud_de_credito__r.Tipo_de_producto_comercial__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de producto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_tramite__c</fullName>
        <formula>TEXT(Radicacion_de_credito__r.Tipo_de_tramite__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de trámite</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tramita_compra_de_cartera_en_CF__c</fullName>
        <label>¿Tramita compra de cartera en CF?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valor_de_las_cuotas__c</fullName>
        <label>Valor de las cuotas</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valor_de_las_cuotas_cod1__c</fullName>
        <label>Valor de las cuotas</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valor_del_credito_solicitado__c</fullName>
        <label>Valor del crédito solicitado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valor_del_credito_solicitado_cod1__c</fullName>
        <label>Valor del crédito solicitado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ya_separo_el_inmueble__c</fullName>
        <label>Ya separo el inmueble?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ya_separo_el_inmueble_cod1__c</fullName>
        <label>Ya separo el inmueble?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cuantas_personas_tiene_a_cargo_familiar__c</fullName>
        <label>Cuantas personas tiene a cargo?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cuantos_empleados_codeudor2__c</fullName>
        <label>Cuantos empleados tiene la empresa?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cuantos_empleados_maneja_comercial1__c</fullName>
        <label>Cuantos empleados maneja la empresa?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>la_empresa_a_que_se_dedica_comercial1__c</fullName>
        <label>la empresa a que se dedica?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>la_forma_de_pago_es_credito_o_contado__c</fullName>
        <label>La forma de pago es crédito o contado?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Crédito</fullName>
                </value>
                <value>
                    <fullName>Contado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Referenciación y verificación</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Consecutivo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referenciaciones y verificaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>REF001_Preguntas_para_asignacion_cupo</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT( ISNEW() ),  Tipo_de_producto__c = &quot;Asignación de cupo&quot;,

OR(

   NOT( ISBLANK(Ya_separo_el_inmueble__c ) ), 
   NOT( ISBLANK(Con_cuanto_dinero_lo_separo__c ) ), 
   NOT( ISBLANK(Como_va_a_pagar_la_cuota_inicial__c ) ), 
   NOT( ISBLANK( Valor_de_las_cuotas__c ) ), 
   NOT( ISBLANK( Como_va_a_completar_el_restante__c ) ) 


))</errorConditionFormula>
        <errorMessage>REF-001 Si el tipo de trámite es Asignación de cupo , No debe diligenciar los campos: Ya separo el inmueble,Con cuanto dinero lo separo,Como va a pagar la cuota inicial,Valor de las cuotas,Como va a completar el restante .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>REF002_Consecutivo_de_la_radicacion</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Radicacion_de_credito__c )</errorConditionFormula>
        <errorMessage>REF-002.No modificar el consecutivo de la radicación</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>REF003_Tipo_de_producto_compra_cartera</fullName>
        <active>true</active>
        <errorConditionFormula>AND(

Tipo_de_producto__c = &quot;Compra de cartera hipotecaria&quot;,

OR(
ISPICKVAL(Tramita_compra_de_cartera_en_CF__c,&quot;&quot;),
ISBLANK(Cual_es_el_valor_del_credito__c),
ISBLANK(Fecha_de_nacimiento_cliente_deudor__c),
ISBLANK(Confirma_valor_de_la_cuota_que_solicita__c),
ISPICKVAL(Entidad_del_credito_actual__c,&quot;&quot;)

))</errorConditionFormula>
        <errorMessage>REF-003.Si el tipo de producto es &quot;Compra de cartera hipotecaria&quot; , diligenciar la sección : &quot;Compra de cartera hipotecaria &quot;</errorMessage>
    </validationRules>
</CustomObject>